<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".ui.traveler.travel.TravelBookingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:text="Pesan Tiket"
            android:textColor="@color/md_black_1000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgTravel"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/sample" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_detail_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:maxLines="2"
                            android:textColor="@color/md_black_1000"
                            tools:text="Pantai Kartini" />

                        <!--<RatingBar
                            android:id="@+id/rateHotel"
                            style="@style/customRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_detail_nama"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:rating="0"
                            android:stepSize="0.5" />-->

                        <TextView
                            android:id="@+id/tv_detail_harga"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat"
                            tools:text="IDR 20000" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="Detail Tiket"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight=".7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="Per orang"
                        android:textColor="@color/grey_white"
                        android:textSize="14sp" />
                    <LinearLayout
                        android:layout_weight=".4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:gravity="center|end"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnPlus"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_plus"/>
                        <TextView
                            android:id="@+id/tv_total_orang"
                            tools:text="1"
                            android:gravity="center"
                            android:layout_width="50dp"
                            android:focusableInTouchMode="true"
                            android:background="@android:color/transparent"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/btnMinus"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_minus"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="Tanggal"
                        android:textColor="@color/grey_white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edt_set_tanggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:background="@drawable/bg_login"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:focusableInTouchMode="false"
                        tools:ignore="LabelFor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="Catatan"
                        android:textColor="@color/grey_white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_login"
                        android:gravity="top"
                        android:padding="4dp"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="240"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="@font/montserrat"
                        android:text="240"
                        android:textColor="@color/grey_white"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Total" />

                <TextView
                    android:id="@+id/tv_detail_harga_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="IDR 20000" />

                <Button
                    android:id="@+id/btnBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_button_booking"
                    android:text="Pesan Sekarang"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>