<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.home.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Login"
                android:fontFamily="@font/dynalight"
                android:textColor="@color/colorPrimary"
                android:textSize="64sp"
                android:layout_marginBottom="32dp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawableLeft="@drawable/ic_mail"
                        android:drawablePadding="12dp"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                style="@style/TextyButton"
                android:id="@+id/btnForgorPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:onClick="onClick"
                android:layout_marginRight="24dp"
                android:text="@string/lupa_passowrd" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/login" />

            <Button
                style="@style/TextyButton"
                android:id="@+id/btnCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:onClick="onClick"
                android:text="Tidak punya akun" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>