...
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />

        <Button
            android:id="@+id/btnBeranda"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button1_bg"
            android:fontFamily="@font/montserrat"
            android:text="Beranda"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_subtitle" />
...
