<resources>
    <string name="map_api">AIzaSyCMYGuL0GWPZM-9_SdZcVqgJayUDStPHhU</string>
    <string name="app_name">KuyTravel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="lupa_passowrd">Lupa Passowrd?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="nama">Nama Lengkap</string>
    <string name="masuk_akun">Masuk akun</string>
    <string name="reset_password">Reset Password</string>
...
